# cbor

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_cbor_serializer.cpp
.github/workflows/: build.yml
cbor/: cbor.h  pod.h  stl.h  traits.h  util.h
include/cbor/: cbor.h  exceptions.h  pod.h  stl.h  traits.h  util.h
src/: shortfloat.cpp
test/: CMakeLists.txt  example.cpp  fuzzer.cpp  generate_fuzz_corpus.py  shortfloat.cpp  shortfloat.h  test.h  test_cbor_serializer.cpp  test_fuzz_input.cpp  test_fuzzer.cpp  test_no_exceptions.cpp  test_no_heap.cpp  test_shortfloat.cpp
